--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
         android:id="@+id/daily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Daily"
         />
 
-    <TextView
+    <Button
         android:id="@+id/weekly"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
