--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/f_background"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/daily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Daily"
-        />
+        android:text="Daily" />
 
     <Button
         android:id="@+id/weekly"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weekly"
-        />
-
+        android:text="Weekly" />
 
 
 </android.support.constraint.LinearLayout>
